[package]
name = "huawei-b525-vpn-connection-api"
version = "0.1.0"
authors = ["Jerome Bernard <jerome.bernard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
headless_chrome = "0.9.0"
failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.1"